plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'Kusitms 32nd Cheeeese Server'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.retry:spring-retry'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

	// security
	testImplementation 'org.springframework.security:spring-security-test'

	// oauth
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // uuid v7
	implementation 'com.github.f4b6a3:uuid-creator:5.2.0'

	// AWS SDK for S3
	implementation 'software.amazon.awssdk:s3:2.25.46'
	implementation 'software.amazon.awssdk:auth:2.25.46'
	implementation 'software.amazon.awssdk:regions:2.25.46'

	testImplementation 'com.h2database:h2'
    // aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// monitoring
	implementation 'net.logstash.logback:logstash-logback-encoder:6.6'

	// prometheus
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// 리사이징
	implementation 'net.coobird:thumbnailator:0.4.21'
}

tasks.named('test') {
    useJUnitPlatform {
        excludeTags 'benchmark'
    }

	jvmArgs '-XX:+EnableDynamicAgentLoading'
}
